--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "18.2.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "lucide-react": "^0.244.0",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.63.4",
     "typescript": "5.1.3"
   }
 }
